# jornada-do-chamado

./: index.html  package-lock.json  package.json  vite.config.js
public/assets/characters/layers/: armors.json  body.json  fx.json  robes.json  weapons.json
scripts/: build-sprites.js
src/: main.js
src/data/: avatarSchema.js
src/objects/: AvatarRenderer.js
src/scenes/: BootScene.js  CharacterCreationScene.js  GameScene.js
src/utils/: playerData.js
tools/: generate_dummy_atlases.py  generate_placeholders.py  pyproject.toml
